--- a/2-navegacion/src/pages/modal/modal.html
+++ b/2-navegacion/src/pages/modal/modal.html
@@ -15,4 +15,11 @@
 
 <ion-content padding>
 
+<button ion-button block (click)="cerrar_con_parametros()" color="primary">
+  Cerrar Con Parametros
+</button>
+
+<button ion-button block (click)="cerrar_sin_parametros()" color="morado">
+  Cerrar Sin Parametros
+</button>
 </ion-content>
