--- a/2-navegacion/src/pages/ajustes/ajustes.html
+++ b/2-navegacion/src/pages/ajustes/ajustes.html
@@ -1,13 +1,8 @@
-<!--
-  Generated template for the AjustesPage page.
 
-  See http://ionicframework.com/docs/components/#navigation for more info on
-  Ionic pages and navigation.
--->
 <ion-header>
 
-  <ion-navbar>
-    <ion-title>ajustes</ion-title>
+  <ion-navbar color="primary">
+    <ion-title>Ajustes</ion-title>
   </ion-navbar>
 
 </ion-header>
@@ -15,4 +10,11 @@
 
 <ion-content padding>
 
+<button ion-button color="primary" block (click)="activarprincipal()">
+Activar Principal
+</button>
+
+<button color= "morado" ion-button block (click)="mostrar_modal()">
+  Mostar Modal
+</button>
 </ion-content>
