--- a/2-navegacion/src/pages/pagina2/pagina2.html
+++ b/2-navegacion/src/pages/pagina2/pagina2.html
@@ -4,7 +4,7 @@
   See http://ionicframework.com/docs/components/#navigation for more info on
   Ionic pages and navigation.
 -->
-<ion-header>
+<ion-header color="primary">
 
   <ion-navbar>
     <ion-title>pagina2</ion-title>
@@ -15,4 +15,18 @@
 
 <ion-content padding>
 
+<h1>Enviando con eventos</h1>
+<ion-list>
+    <ion-item *ngFor="let super of mutantes" (click)="irPagina3(super)">
+      {{super.nombre}}
+    </ion-item>
+</ion-list>
+
+<h1>Enviando con HTML</h1>
+<ion-list>
+    <ion-item *ngFor="let super of mutantes" [navPush]="pagina3"
+                [navParams]="{'mutante': super}">
+      {{super.nombre}}
+    </ion-item>
+</ion-list>
 </ion-content>
