--- a/2-navegacion/src/pages/tabs/tabs.html
+++ b/2-navegacion/src/pages/tabs/tabs.html
@@ -1,18 +1,6 @@
-<!--
-  Generated template for the TabsPage page.
+<ion-tabs color="primary" selectedIndex="2">
 
-  See http://ionicframework.com/docs/components/#navigation for more info on
-  Ionic pages and navigation.
--->
-<ion-header>
+    <ion-tab tabIcon="alarm" tabTitle="Principal" [root]="tab1"> </ion-tab>
+    <ion-tab tabIcon="hammer" tabTitle="Ajuste" [root]="tab2"> </ion-tab>
 
-  <ion-navbar>
-    <ion-title>tabs</ion-title>
-  </ion-navbar>
-
-</ion-header>
-
-
-<ion-content padding>
-
-</ion-content>
+</ion-tabs>
