--- a/2-navegacion/src/pages/principal/principal.html
+++ b/2-navegacion/src/pages/principal/principal.html
@@ -13,7 +13,8 @@
 </ion-header>
 
 
-<ion-content padding>
+  <!-- ><ion-content padding>
+
   <button ion-button block (click)= "navegarpagina()">
   Ir a la pag 2
   </button>
@@ -22,4 +23,35 @@
   Ir a la pag 2 - HTML
   </button>
 
+  <button ion-button block  color="danger" (click)="buscarDispositivos()">
+    Buscar dispositivos
+  </button>
+
+</ion-content>< -->
+
+
+<ion-content padding>
+  <button ion-button full class="submit-button" (click)="listPairedDevices()">
+    <ion-icon name="refresh"></ion-icon>&nbsp;Refresh Bluetooth Devices</button>
+  <ion-row>
+    <ion-col>
+      <ion-list radio-group [(ngModel)]="pairedDeviceID" *ngIf="listToggle">
+        <ion-item *ngFor="let i of pairedList;let j=index">
+          <ion-label>{{i.name}}</ion-label>
+          <ion-radio value="{{j}}" ></ion-radio>
+        </ion-item>
+      </ion-list>
+    </ion-col>
+  </ion-row>
+  <button ion-button full class="submit-button" *ngIf="listToggle" (click)="selectDevice()">
+    <ion-icon name="bluetooth"></ion-icon>&nbsp;Connect Bluetooth Devices</button>
+  <ion-list>
+    <ion-item>
+      <ion-label floating>Type The Data You want to Send</ion-label>
+      <ion-input type="text" name="datasend" [(ngModel)]="dataSend"></ion-input>
+    </ion-item>
+  </ion-list>
+  <button ion-button full class="submit-button" (click)="sendData()">
+    <ion-icon name="send"></ion-icon>&nbsp;Send Data Via Bluetooth
+  </button>
 </ion-content>
